# kafka_study

./: docker-compose-kafdrop.yml  docker-compose.yml
kfk_client/: .env.template  .gitignore  README.md  alembic.ini  pyproject.toml  run_debug.py
kfk_client/src/: config.py  database.py  logging_conf.py  main.py  middlewares.py
kfk_client/src/actions/: create_superuser.py
kfk_client/src/api/: __init__.py
kfk_client/src/api/api_v1/: __init__.py  auth.py  email.py  fastapi_users_main.py  files.py  users.py
kfk_client/src/api/dependencies/: access_token.py  backend.py  pagination.py  strategy.py  user_manager.py  users.py
kfk_client/src/broker/: __init__.py  broker.py  consumer_base.py  consumers.py  dependencies.py  utils.py
kfk_client/src/core/authentication/: transport.py  user_manager.py
kfk_client/src/core/models/: __init__.py  access_token.py  emails.py  uploaded_file.py  users.py
kfk_client/src/gunicorn/: __init__.py  application.py  logger.py
kfk_client/src/healthcheck/: router.py
kfk_client/src/migrations/: env.py
kfk_client/src/storage/: dependencies.py  storage.py
kfk_client/src/utils/: auth.py  run_in_threadpool.py
kfk_client/utils/: string.py  time.py
kfk_mail_service/: .env.template  Readme.md  hello.py  pyproject.toml  run.sh
kfk_mail_service/src/: app.py  config.py  schemas.py
kfk_mail_service/src/broker/: base_consumer.py  consumers.py  producer.py  utils.py
kfk_mail_service/src/smtp/: dependencies.py  message.py  service.py
kfk_mail_service/src/storage/: __init__.py  dependencies.py  storage.py
(+18 files in other folders)
