[project]
name = "kfk-mail-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "aiosmtplib>=4.0.1",
    "litestar[standard]>=2.16.0",
    "pydantic[email]>=2.11.4",
    "pydantic-settings>=2.9.1",
    "uvicorn>=0.34.2",
    "aiofiles>=24.1.0",
    "aiocsv>=1.3.2",
]
